--- a/Elemental-Cuisine/src/app/components/user-form/user-form.component.html
+++ b/Elemental-Cuisine/src/app/components/user-form/user-form.component.html
@@ -93,7 +93,7 @@
     <ion-label position="floating">Perfil</ion-label>
     <ion-select formControlName="profile" placeholder="Seleccione perfil">
       <ion-select-option value="mozo">Mozo</ion-select-option>
-      <ion-select-option value="maitre">Metre</ion-select-option>
+      <ion-select-option value="maitre">Maitre</ion-select-option>
       <ion-select-option value="cocinero">Cocinero</ion-select-option>
       <ion-select-option value="bartender">Bartender</ion-select-option>
       <ion-select-option value="admin">Dueño</ion-select-option>
