--- a/Elemental-Cuisine/src/app/pages/wait-list/wait-list.page.html
+++ b/Elemental-Cuisine/src/app/pages/wait-list/wait-list.page.html
@@ -6,7 +6,7 @@
       <ion-icon class="item-ico" name="people"></ion-icon>
       <h3>No hay clientes en la lista de espera</h3>
     </div>
-    <ion-item *ngFor="let user of users" (click)="removeClient(user)" color="transparent">
+    <ion-item *ngFor="let user of users" (click)="showTables(user)" color="transparent">
       <ion-icon class="icon-right-margin" name="person"></ion-icon>
       <ion-label>{{user.name}}</ion-label>
       <ion-label class="ion-text-right">{{user.date | date:'HH:mm'}}</ion-label>
