--- a/Elemental-Cuisine/src/app/app.component.scss
+++ b/Elemental-Cuisine/src/app/app.component.scss
@@ -117,7 +117,6 @@
      width: 30%;
      height: 8px;
      background: $color-shadow;
-     // box-shadow: 5px 0 8px 4px $color-shadow;
      border-radius: 20px;
      animation: shadow $timing infinite;
    }
@@ -125,7 +124,7 @@
  }
 
  .title {
-    color: white;
+    color: #ed5564;
     text-align: center;
     position: fixed;
     top: 30px;
@@ -143,6 +142,5 @@
     display: flex;
     align-items: center;
     justify-content: center; 
-    background: rgba(255,255,255,1);
-    background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%, #3949AB 100%);
+    background: url(../assets/images/dinner-opacity-20.jpg) no-repeat center
  }
