--- a/Elemental-Cuisine/src/app/components/user-form/user-form.component.html
+++ b/Elemental-Cuisine/src/app/components/user-form/user-form.component.html
@@ -91,7 +91,7 @@
 
   <ion-item *ngIf="!isClient">
     <ion-label position="floating">Perfil</ion-label>
-    <ion-select formControlName="profile" placeholder="Seleccione perfil">
+    <ion-select formControlName="profile" placeholder="Seleccione perfil" okText="Aceptar" cancelText="Cancelar">
       <ion-select-option value="mozo">Mozo</ion-select-option>
       <ion-select-option value="maitre">Maitre</ion-select-option>
       <ion-select-option value="cocinero">Cocinero</ion-select-option>
